--- a/index.html
+++ b/index.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Apeperia</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/cabecalho.css">
+    <link rel="stylesheet" href="css/chamada.css">
 </head>
+
 <body>
-    <header>
-        <img src="img/logo-apeperia.svg" alt="Logo da Apeperia">
-        <nav>
+    <header class="cabecalho">
+        <img class="cabecalho__logo" src="img/logo-apeperia.svg" alt="Logo da Apeperia">
+        <nav class="cabecalho__navegacao">
             <ul>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Planos</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Destaques</a></li>
-                <li><a href="#">Institucional</a></li>
-                <li><a href="#">Contato</a></li>
+                <li class="cabecalho__link"><a href="#">Sobre</a></li>
+                <li class="cabecalho__link"><a href="#">Planos</a></li>
+                <li class="cabecalho__link"><a href="#">Blog</a></li>
+                <li class="cabecalho__link"><a href="#">Destaques</a></li>
+                <li class="cabecalho__link"><a href="#">Institucional</a></li>
+                <li class="cabecalho__link"><a href="#">Contato</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section>
-            <h1>Aplicativos Na Medida</h1>
-            <p>Apeperia tem um jeito inovador de comparar e montar aplicativos para pequenas e médias empresas.</p>
-            <a href="#">Conheça os planos</a>
+        <section class="chamada">
+            <h1 class="chamada__titulo">Aplicativos Na Medida</h1>
+            <p class="chamada__texto">Apeperia tem um jeito inovador de comparar e montar aplicativos para pequenas e médias empresas.</p>
+            <a class="chamada__botao" href="#">Conheça os planos</a>
         </section>
     </main>
 </body>
+
 </html>
