--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header class="cabecalho">
+    <header class="cabecalho container">
         <img class="cabecalho__logo" src="img/logo-apeperia.svg" alt="Logo da Apeperia">
         <nav class="cabecalho__navegacao">
             <ul>
@@ -32,10 +32,10 @@
         </nav>
     </header>
     <main>
-        <section class="chamada">
+        <section class="chamada container">
             <h1 class="chamada__titulo">Aplicativos Na Medida</h1>
             <p class="chamada__texto">Apeperia tem um jeito inovador de comparar e montar aplicativos para pequenas e médias empresas.</p>
-            <a class="chamada__botao" href="#">Conheça os planos</a>
+            <a class="chamada__botao botao" href="#">Conheça os planos</a>
         </section>
     </main>
 </body>
