--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/contato.css">
     <link rel="stylesheet" href="css/institucional.css">
     <link rel="stylesheet" href="css/planos.css">
+    <link rel="stylesheet" href="css/rodape.css">
 </head>
 
 <body>
@@ -172,6 +173,25 @@
             <video src="img/formacao-java.mp4" class="institucional__video" controls></video>
         </section>
     </main>
+
+    <footer class="rodape container">
+        <img src="img/logo-apeperia.svg" alt="Logo da Apeperia" class="rodape__logo">
+        <ul class="rodape_social">
+            <li><a href="#" class="rodape__midia"><img src="img/facebook.png" alt="Icone do facebook"></a></li>
+            <li><a href="#" class="rodape__midia"><img src="img/twitter.png" alt="Icone do Twitter"></a></li>
+            <li><a href="#" class="rodape__midia"><img src="img/instagram.png" alt="Icone do Instagram"></a></li>
+        </ul>
+        <nav>
+            <ul class="rodape__navegacao">
+                <li class="rodape__link"><a href="#">Sobre</a></li>
+                <li class="rodape__link"><a href="#">Planos</a></li>
+                <li class="rodape__link"><a href="#">Blog</a></li>
+                <li class="rodape__link"><a href="#">Destaques</a></li>
+                <li class="rodape__link"><a href="#">Institucional</a></li>
+                <li class="rodape__link"><a href="#">Contato</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 
 </html>
