--- a/index.html
+++ b/index.html
@@ -110,7 +110,6 @@
                 </ul>
                 <p class="sobre__texto">Desenvolvemos aplicativos para todas as plataformas</p>
             </div>
-            <img src="img/sobre-apeperia.png" alt="Sobre a Apeperia" class="sobre__imagem">
         </section>
 
         <section class="planos container">
@@ -176,7 +175,7 @@
 
     <footer class="rodape container">
         <img src="img/logo-apeperia.svg" alt="Logo da Apeperia" class="rodape__logo">
-        <ul class="rodape_social">
+        <ul class="rodape__social">
             <li><a href="#" class="rodape__midia"><img src="img/facebook.png" alt="Icone do facebook"></a></li>
             <li><a href="#" class="rodape__midia"><img src="img/twitter.png" alt="Icone do Twitter"></a></li>
             <li><a href="#" class="rodape__midia"><img src="img/instagram.png" alt="Icone do Instagram"></a></li>
