--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                 </ul>
                 <p class="sobre__texto">Desenvolvemos aplicativos para todas as plataformas</p>
             </div>
+            <img src="img/sobre-apeperia.png" alt="Sobre a Apeperia" class="sobre__imagem">
         </section>
 
         <section class="planos container">
